force-app/main/default/objects/SSO_User_Maping_Config__mdt/SSO_User_Maping_Config__mdt.object-meta.xml
<CustomObject>
    <description>This Object is used to store role(SSO attribute) to Salesforce role,profile,permission set mapping</description>
    <label>SSO User Maping Config</label>
    <pluralLabel>SSO User Maping Configs</pluralLabel>
</CustomObject>