force-app/main/default/objects/SSO_User_Maping_Config__mdt/fields/Is_Default__c.field-meta.xml
<CustomField>
    <fullName>Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Default Profile and Permission Set Group to be used if no mapping is specified for a User&apos;s group.</description>
    <inlineHelpText>Default Profile and Permission Set Group to be used if no mapping is specified for a User&apos;s group.</inlineHelpText>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>