force-app/main/default/objects/SSO_User_Maping_Config__mdt/fields/Salesforce_Permission_Set_Group__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Permission_Set_Group__c</fullName>
    <label>Salesforce Permission Set Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>