force-app/main/default/objects/SSO_User_Maping_Config__mdt/fields/Salesforce_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Profile_Name__c</fullName>
    <label>Salesforce Profile Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>